tests/negative/test_expr_dot_base_not_data.orb
fnc main() {
    i32 x;
    x.a;
}